force-app/main/default/objects/Repayment_Schedule__c/Repayment_Schedule__c.object-meta.xml
<CustomObject>
    <description>This is a single scheduled repayment for a loan-type of investment</description>
    <label>Repayment Schedule</label>
    <nameField>
        <displayFormat>RS-{00000000}</displayFormat>
        <label>Repayment Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repayment Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>