force-app/main/default/objects/Repayment_Schedule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>States if the Repayment Schedule record is currenlty active (i.e. not rescheduled/refinanced/written off)</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>