force-app/main/default/objects/Repayment_Schedule__c/fields/Cancel_Late_Repayment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Late_Repayment_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Late Repayment Fee</label>
    <type>Checkbox</type>
</CustomField>