force-app/main/default/objects/Repayment_Schedule__c/fields/Current_Interest_Expected__c.field-meta.xml
<CustomField>
    <fullName>Current_Interest_Expected__c</fullName>
    <formula>Interest_Expected_Standard_Loan__c * (IF(TODAY() &gt; Due_Date__c, Due_Date__c, IF(TODAY() &lt; Start_Date__c, Start_Date__c, TODAY())) -  Start_Date__c ) / ( Due_Date__c - Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Interest Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>