force-app/main/default/objects/Repayment_Schedule__c/fields/Daily_Late_Repayment_Fees__c.field-meta.xml
<CustomField>
    <fullName>Daily_Late_Repayment_Fees__c</fullName>
    <formula>IF(TEXT(Loan__r.Late_Repayment_Calculation_Method__c) == &#39;Principal&#39;, 
    Principal_Remaining__c, 
    IF(TEXT(Loan__r.Late_Repayment_Calculation_Method__c) == &#39;Principal+Interest&#39;,
        (Principal_Remaining__c + Interest_Remaining__c),
        0
    )
) * Loan__r.Late_Repayment_Interest_Rate__c / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Late Repayment Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>