force-app/main/default/objects/Repayment_Schedule__c/fields/Days_Since_Last_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Paid_Date__c</fullName>
    <formula>IF(
    AND(
        NOT(ISNULL(Last_Paid_Date__c)), 
        Last_Paid_Date__c &gt; IF(Loan__r.Open_Ended_Loan__c, Loan__r.Disbursement_Date__c, Due_Date_with_Tolerance_Period__c), 
        Last_Paid_Date__c &lt;= TODAY()
    ), 
    TODAY() - Last_Paid_Date__c, 
    IF(IF(Loan__r.Open_Ended_Loan__c, Loan__r.Disbursement_Date__c, Due_Date_with_Tolerance_Period__c) &lt;= TODAY(), 
        TODAY() - IF(Loan__r.Open_Ended_Loan__c, Loan__r.Disbursement_Date__c, Due_Date_with_Tolerance_Period__c), 
        0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Paid Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>