force-app/main/default/objects/Repayment_Schedule__c/fields/Due_Date_with_Tolerance_Period__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_with_Tolerance_Period__c</fullName>
    <formula>Due_Date__c + IF(ISNULL(Loan__r.Late_Repayment_Tolerance_Period__c), 0, Loan__r.Late_Repayment_Tolerance_Period__c)</formula>
    <label>Due Date with Tolerance Period</label>
    <type>Date</type>
</CustomField>