force-app/main/default/objects/Repayment_Schedule__c/fields/Expected_Principal_Balance__c.field-meta.xml
<CustomField>
    <fullName>Expected_Principal_Balance__c</fullName>
    <label>Expected Principal Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>