force-app/main/default/objects/Repayment_Schedule__c/fields/Fees_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Fees_Overdue__c</fullName>
    <formula>if(Fees_Due__c - Fees_Paid__c&lt;0,0,Fees_Due__c - Fees_Paid__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fees Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>