force-app/main/default/objects/Repayment_Schedule__c/fields/Fees_Written_Off__c.field-meta.xml
<CustomField>
    <fullName>Fees_Written_Off__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount of Fees Written Off for this Repayment Schedule</description>
    <label>Fees Written Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>