force-app/main/default/objects/Repayment_Schedule__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fund the investment is linked to</description>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Repayment Schedules</relationshipLabel>
    <relationshipName>Repayment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>