force-app/main/default/objects/Repayment_Schedule__c/fields/Interest_Bonus_Received__c.field-meta.xml
<CustomField>
    <fullName>Interest_Bonus_Received__c</fullName>
    <label>Interest Bonus Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>