force-app/main/default/objects/Repayment_Schedule__c/fields/Interest_Charge__c.field-meta.xml
<CustomField>
    <fullName>Interest_Charge__c</fullName>
    <description>This field stores an interest expected amount calculated normally based on # days in month for standard loans with the &#39;Interest Rollup&#39; Grace Period Type.</description>
    <label>Interest Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>