force-app/main/default/objects/Repayment_Schedule__c/fields/Interest_Expected_On_Last_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Expected_On_Last_Paid_Date__c</fullName>
    <label>Interest Expected On Last Paid Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>