force-app/main/default/objects/Repayment_Schedule__c/fields/Interest_Expected_Open_Ended_Loan__c.field-meta.xml
<CustomField>
    <fullName>Interest_Expected_Open_Ended_Loan__c</fullName>
    <formula>Interest_Expected_On_Last_Paid_Date__c + (TODAY() - IF(ISNULL(Last_Action_Date__c), Loan__r.Disbursement_Date__c, Last_Action_Date__c)) * Principal_Remaining__c * Loan__r.Interest_Rate__c / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Expected (Open Ended Loan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>