force-app/main/default/objects/Repayment_Schedule__c/fields/Interest_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Interest_Overdue__c</fullName>
    <formula>if(Interest_Due__c - Interest_Paid__c&lt;0,0,Interest_Due__c - Interest_Paid__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>