force-app/main/default/objects/Repayment_Schedule__c/fields/Last_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Action_Date__c</fullName>
    <description>This is a day when the last action happened (disburse, repayment, interest rate change).</description>
    <label>Last Action Date</label>
    <type>Date</type>
</CustomField>