force-app/main/default/objects/Repayment_Schedule__c/fields/Last_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Paid_Date__c</fullName>
    <label>Last Paid Date</label>
    <type>Date</type>
</CustomField>