force-app/main/default/objects/Repayment_Schedule__c/fields/Late_Repayment_Fees_On_Last_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Late_Repayment_Fees_On_Last_Paid_Date__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Late Repayment Fees On Last Paid Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>