force-app/main/default/objects/Repayment_Schedule__c/fields/Late_Repayment_Fees_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Late_Repayment_Fees_Remaining__c</fullName>
    <formula>Late_Repayment_Fees_Expected0__c - Late_Repayment_Fees_Paid__c - Late_Repayment_Fees_Written_Off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late Repayment Fees Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>