force-app/main/default/objects/Repayment_Schedule__c/fields/Late_Repayment_Fees_Written_Off__c.field-meta.xml
<CustomField>
    <fullName>Late_Repayment_Fees_Written_Off__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount of Penalties Written Off for this Repayment Schedule</description>
    <label>Late Repayment Fees Written Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>