force-app/main/default/objects/Repayment_Schedule__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <description>The Loan (Investment) to which this Repayment Schedule record applies</description>
    <inlineHelpText>The Loan (Investment) to which this Repayment Schedule record applies</inlineHelpText>
    <label>Loan</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>Repayment Schedules</relationshipLabel>
    <relationshipName>Repayment_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>