force-app/main/default/objects/Repayment_Schedule__c/fields/Monitoring_Fees_Expected__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Fees_Expected__c</fullName>
    <label>Monitoring Fees Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>