force-app/main/default/objects/Repayment_Schedule__c/fields/Principal_Balance__c.field-meta.xml
<CustomField>
    <fullName>Principal_Balance__c</fullName>
    <description>The total remaining Principal Balance on Investment Level after the latest payment to this schedule.</description>
    <inlineHelpText>The total remaining Principal Balance on Investment Level after the latest payment to this schedule.</inlineHelpText>
    <label>Principal Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>