force-app/main/default/objects/Repayment_Schedule__c/fields/Principal_Due__c.field-meta.xml
<CustomField>
    <fullName>Principal_Due__c</fullName>
    <label>Principal Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>