force-app/main/default/objects/Repayment_Schedule__c/fields/Principal_Expected__c.field-meta.xml
<CustomField>
    <fullName>Principal_Expected__c</fullName>
    <label>Principal Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>