force-app/main/default/objects/Repayment_Schedule__c/fields/Principal_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Principal_Overdue__c</fullName>
    <formula>if(Principal_Due__c - Principal_Paid__c&lt;0,0,Principal_Due__c - Principal_Paid__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>