force-app/main/default/objects/Repayment_Schedule__c/fields/Principal_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Principal_Remaining__c</fullName>
    <formula>Principal_Expected__c - Principal_Paid__c - Principal_Written_Off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>