force-app/main/default/objects/Repayment_Schedule__c/fields/Principal_Written_Off__c.field-meta.xml
<CustomField>
    <fullName>Principal_Written_Off__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount of Principal Written Off for this Repayment Schedule</description>
    <label>Principal Written Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>