force-app/main/default/objects/Repayment_Schedule__c/fields/Repaid_Date__c.field-meta.xml
<CustomField>
    <fullName>Repaid_Date__c</fullName>
    <label>Repaid Date</label>
    <type>Date</type>
</CustomField>