force-app/main/default/objects/Repayment_Schedule__c/fields/Setup_Fees_Expected__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fees_Expected__c</fullName>
    <label>Setup Fees Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>