force-app/main/default/objects/Repayment_Schedule__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>This is a day from which the repayment schedule begins</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>