force-app/main/default/objects/Repayment_Schedule__c/fields/Theoretical_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Theoretical_Due_Date__c</fullName>
    <label>Theoretical Due Date</label>
    <type>Date</type>
</CustomField>