force-app/main/default/objects/Repayment_Schedule__c/fields/Total_Amount_Written_Off__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Written_Off__c</fullName>
    <formula>Principal_Written_Off__c + Interest_Written_Off__c + Fees_Written_Off__c + Late_Repayment_Fees_Written_Off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Written Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>