force-app/main/default/objects/Repayment_Schedule__c/fields/Total_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Due__c</fullName>
    <formula>Fees_Due__c + Interest_Due__c + Late_Repayment_Fees_Due__c + Principal_Due__c + Interest_Bonus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>