force-app/main/default/objects/Repayment_Schedule__c/fields/Total_Expected__c.field-meta.xml
<CustomField>
    <fullName>Total_Expected__c</fullName>
    <formula>Fees_Expected__c + Interest_Expected0__c + Late_Repayment_Fees_Expected0__c + Principal_Expected__c + Interest_Bonus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>