force-app/main/default/objects/Repayment_Schedule__c/fields/Total_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Total_Overdue__c</fullName>
    <formula>if(Total_Due__c - Total_Paid__c&lt;0,0,Total_Due__c - Total_Paid__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>