force-app/main/default/objects/Repayment_Schedule__c/fields/Total_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Remaining__c</fullName>
    <formula>Total_Expected__c - Total_Paid__c - Total_Amount_Written_Off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>